--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,36 @@
+
+# OSX
+#
+.DS_Store
+
+# node.js
+#
+node_modules/
+npm-debug.log
+yarn-error.log
+  
+
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+project.xcworkspace
+      
+
 # Android/IntelliJ
 #
 build/
@@ -6,4 +39,11 @@ build/
 local.properties
 *.iml
 
-DS_STORE
+# BUCK
+buck-out/
+\.buckd/
+*.keystore
+
+# VSCODE
+.project
+.settings
