--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "react-native": "^0.41.2",
+    "react-native-windows": "0.41.0-rc.1"
   }
 }
