--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hungry-inner-fence",
   "version": "1.0.0",
   "description": "",
+  "summary": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
